# internal/router/router.go
@@ -25,23 +25,20 @@ func NewRouter(db *gorm.DB) *gin.Engine {
     v1 := router.Group("/api/v1")
     {
         v1.GET("/", handlers.WelcomeHandler)
+        v1.POST("/users", handlers.NewUserHandler(service.NewUserService(userRepository)).CreateUser)
+        
+        v1.Use(middleware.AuthMiddleware())
+        {
+            // User routes
+            userService := service.NewUserService(userRepository)
+            userHandler := handlers.NewUserHandler(userService)
+            v1.GET("/users/:id", userHandler.GetUserByID)
+            v1.GET("/users", userHandler.GetAllUsers)
+            v1.PUT("/users/:id", userHandler.UpdateUser)
+            v1.DELETE("/users/:id", userHandler.DeleteUser)
 
-        // User routes (without AuthMiddleware)
-        userService := service.NewUserService(userRepository)
-        userHandler := handlers.NewUserHandler(userService)
-        v1.POST("/users", userHandler.CreateUser)
-        v1.GET("/users/:id", userHandler.GetUserByID)
-        v1.PUT("/users/:id", userHandler.UpdateUser)
-        v1.DELETE("/users/:id", userHandler.DeleteUser)
-
-        // Define your other unprotected routes here
-    }
-
-    // Protected routes
-    protected := router.Group("/api/v1")
-    protected.Use(middleware.AuthMiddleware())
-    {
-        // Define your protected routes here
+            // Define your other protected routes here
+        }
     }
 
     admin := router.Group("/admin")
@@ -59,5 +56,6 @@ func NewRouter(db *gorm.DB) *gin.Engine {
 // SetupSwagger sets up the Swagger documentation routes
 func SetupSwagger(r *gin.Engine) {
     r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+    // Serve the Swagger JSON generated by swag init
     r.StaticFile("/swagger.json", "./docs/swagger.json")
 }
